--- a/index.html
+++ b/index.html
@@ -1,6 +1,52 @@
-<script type="text/javascript">
-    <!-- HTML CRIPTOGRAFADO POR BIELWQI -->
-    <!--
-    document.write(unescape('%20%20%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%3C%68%65%61%64%3E%0A%20%20%3C%6D%65%74%61%20%63%68%61%72%73%65%74%3D%22%55%54%46%2D%38%22%3E%0A%20%20%3C%6D%65%74%61%20%6E%61%6D%65%3D%22%76%69%65%77%70%6F%72%74%22%20%63%6F%6E%74%65%6E%74%3D%22%77%69%64%74%68%3D%64%65%76%69%63%65%2D%77%69%64%74%68%2C%20%69%6E%69%74%69%61%6C%2D%73%63%61%6C%65%3D%31%2E%30%22%3E%0A%20%20%3C%74%69%74%6C%65%3E%57%51%49%20%4C%4F%47%49%4E%3C%2F%74%69%74%6C%65%3E%0A%20%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%74%79%6C%65%73%68%65%65%74%22%20%68%72%65%66%3D%22%73%74%79%6C%65%2E%63%73%73%22%3E%20%3C%6C%69%6E%6B%20%72%65%6C%3D%22%73%68%6F%72%74%63%75%74%20%69%63%6F%6E%22%20%68%72%65%66%3D%22%66%61%76%69%63%6F%6E%32%2E%77%65%62%70%22%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%62%6F%64%79%3E%0A%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%77%72%61%70%70%65%72%22%3E%0A%20%20%20%20%3C%66%6F%72%6D%20%69%64%3D%22%6C%6F%67%69%6E%2D%66%6F%72%6D%22%3E%0A%20%20%20%20%20%20%3C%68%32%3E%4C%6F%67%69%6E%3C%2F%68%32%3E%0A%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%2D%66%69%65%6C%64%22%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%74%65%78%74%22%20%69%64%3D%22%75%73%65%72%6E%61%6D%65%22%20%72%65%71%75%69%72%65%64%3E%0A%20%20%20%20%20%20%20%20%3C%6C%61%62%65%6C%3E%55%73%75%E1%72%69%6F%3C%2F%6C%61%62%65%6C%3E%0A%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%2D%66%69%65%6C%64%22%3E%0A%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%70%61%73%73%77%6F%72%64%22%20%69%64%3D%22%70%61%73%73%77%6F%72%64%22%20%72%65%71%75%69%72%65%64%3E%0A%20%20%20%20%20%20%20%20%3C%6C%61%62%65%6C%3E%53%65%6E%68%61%3C%2F%6C%61%62%65%6C%3E%0A%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%66%6F%72%67%65%74%22%3E%0A%20%20%20%20%20%20%20%20%3C%6C%61%62%65%6C%20%66%6F%72%3D%22%72%65%6D%65%6D%62%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%69%6E%70%75%74%20%74%79%70%65%3D%22%63%68%65%63%6B%62%6F%78%22%20%69%64%3D%22%72%65%6D%65%6D%62%65%72%22%3E%0A%20%20%20%20%20%20%20%20%20%20%3C%70%3E%4C%65%6D%62%72%61%72%20%64%65%20%6D%69%6D%3C%2F%70%3E%0A%20%20%20%20%20%20%20%20%3C%2F%6C%61%62%65%6C%3E%0A%20%20%20%20%20%20%20%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%64%69%73%63%6F%72%64%2E%67%67%2F%46%36%36%51%6A%63%72%48%4A%4B%22%3E%45%73%71%75%65%63%65%75%20%61%20%73%65%6E%68%61%3F%3C%2F%61%3E%0A%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%20%20%3C%62%75%74%74%6F%6E%20%74%79%70%65%3D%22%73%75%62%6D%69%74%22%3E%41%63%65%73%73%61%72%3C%2F%62%75%74%74%6F%6E%3E%0A%20%20%20%20%20%20%3C%64%69%76%20%63%6C%61%73%73%3D%22%72%65%67%69%73%74%65%72%22%3E%0A%20%20%20%20%20%20%20%20%3C%70%3E%44%65%73%65%6A%61%20%74%65%72%20%61%63%65%73%73%6F%3F%20%3C%61%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%64%69%73%63%6F%72%64%2E%67%67%2F%46%36%36%51%6A%63%72%48%4A%4B%22%3E%43%6C%69%71%75%65%20%61%71%75%69%3C%2F%61%3E%3C%2F%70%3E%0A%20%20%20%20%20%20%3C%2F%64%69%76%3E%0A%20%20%20%20%3C%2F%66%6F%72%6D%3E%0A%20%20%3C%2F%64%69%76%3E%0A%0A%20%20%3C%73%63%72%69%70%74%3E%0A%20%20%20%20%2F%2F%20%46%75%6E%E7%E3%6F%20%70%61%72%61%20%76%65%72%69%66%69%63%61%72%20%61%73%20%63%72%65%64%65%6E%63%69%61%69%73%0A%20%20%20%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%6C%6F%67%69%6E%2D%66%6F%72%6D%27%29%2E%61%64%64%45%76%65%6E%74%4C%69%73%74%65%6E%65%72%28%27%73%75%62%6D%69%74%27%2C%20%66%75%6E%63%74%69%6F%6E%20%28%65%76%65%6E%74%29%20%7B%0A%20%20%20%20%20%20%65%76%65%6E%74%2E%70%72%65%76%65%6E%74%44%65%66%61%75%6C%74%28%29%3B%20%2F%2F%20%49%6D%70%65%64%69%72%20%6F%20%65%6E%76%69%6F%20%70%61%64%72%E3%6F%20%64%6F%20%66%6F%72%6D%75%6C%E1%72%69%6F%0A%0A%20%20%20%20%20%20%63%6F%6E%73%74%20%75%73%65%72%6E%61%6D%65%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%75%73%65%72%6E%61%6D%65%27%29%2E%76%61%6C%75%65%3B%0A%20%20%20%20%20%20%63%6F%6E%73%74%20%70%61%73%73%77%6F%72%64%20%3D%20%64%6F%63%75%6D%65%6E%74%2E%67%65%74%45%6C%65%6D%65%6E%74%42%79%49%64%28%27%70%61%73%73%77%6F%72%64%27%29%2E%76%61%6C%75%65%3B%0A%0A%20%20%20%20%20%20%69%66%20%28%75%73%65%72%6E%61%6D%65%20%3D%3D%3D%20%27%77%71%69%74%68%65%68%79%70%65%27%20%26%26%20%70%61%73%73%77%6F%72%64%20%3D%3D%3D%20%27%70%72%65%64%69%63%74%6F%72%27%29%20%7B%0A%20%20%20%20%20%20%20%20%2F%2F%20%43%72%65%64%65%6E%63%69%61%69%73%20%63%6F%72%72%65%74%61%73%2C%20%72%65%64%69%72%65%63%69%6F%6E%61%72%20%70%61%72%61%20%6F%20%73%69%74%65%0A%20%20%20%20%20%20%20%20%77%69%6E%64%6F%77%2E%6C%6F%63%61%74%69%6F%6E%2E%68%72%65%66%20%3D%20%27%68%74%74%70%73%3A%2F%2F%62%69%65%6C%73%70%65%65%64%2E%67%69%74%68%75%62%2E%69%6F%2F%77%71%69%70%72%65%64%69%63%74%6F%72%2F%27%3B%0A%20%20%20%20%20%20%7D%20%65%6C%73%65%20%7B%0A%20%20%20%20%20%20%20%20%2F%2F%20%43%72%65%64%65%6E%63%69%61%69%73%20%69%6E%63%6F%72%72%65%74%61%73%2C%20%65%78%69%62%69%72%20%75%6D%61%20%6D%65%6E%73%61%67%65%6D%20%64%65%20%65%72%72%6F%20%28%6F%75%20%74%6F%6D%61%72%20%6F%75%74%72%61%20%61%E7%E3%6F%29%0A%20%20%20%20%20%20%20%20%61%6C%65%72%74%28%27%43%72%65%64%65%6E%63%69%61%69%73%20%69%6E%63%6F%72%72%65%74%61%73%2E%20%54%65%6E%74%65%20%6E%6F%76%61%6D%65%6E%74%65%2E%27%29%3B%0A%20%20%20%20%20%20%7D%0A%20%20%20%20%7D%29%3B%0A%20%20%3C%2F%73%63%72%69%70%74%3E%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E'));
-    //-->
-    </script>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>WQI LOGIN</title>
+  <link rel="stylesheet" href="style.css"> <link rel="shortcut icon" href="favicon2.webp">
+</head>
+<body>
+  <div class="wrapper">
+    <form id="login-form">
+      <h2>Login</h2>
+      <div class="input-field">
+        <input type="text" id="username" required>
+        <label>Usuário</label>
+      </div>
+      <div class="input-field">
+        <input type="password" id="password" required>
+        <label>Senha</label>
+      </div>
+      <div class="forget">
+        <label for="remember">
+          <input type="checkbox" id="remember">
+          <p>Lembrar de mim</p>
+        </label>
+        <a href="https://discord.gg/F66QjcrHJK">Esqueceu a senha?</a>
+      </div>
+      <button type="submit">Acessar</button>
+      <div class="register">
+        <p>Deseja ter acesso? <a href="https://discord.gg/F66QjcrHJK">Clique aqui</a></p>
+      </div>
+    </form>
+  </div>
+
+  <script>
+    // Função para verificar as credenciais
+    document.getElementById('login-form').addEventListener('submit', function (event) {
+      event.preventDefault(); // Impedir o envio padrão do formulário
+
+      const username = document.getElementById('username').value;
+      const password = document.getElementById('password').value;
+
+      if (username === 'wqithehype' && password === 'predictor') {
+        // Credenciais corretas, redirecionar para o site
+        window.location.href = 'https://bielspeed.github.io/wqipredictor/';
+      } else {
+        // Credenciais incorretas, exibir uma mensagem de erro (ou tomar outra ação)
+        alert('Credenciais incorretas. Tente novamente.');
+      }
+    });
+  </script>
+</body>
+</html>
